--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -547,6 +547,7 @@
   </div>
 
   <script type="module" src="../static/js/script.js"></script>
+  <script src="../static/js/header.js"></script>
 
 </body>
 
